Fix font size issues on smaller screens

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -404,6 +404,9 @@ p {
   font-family: "Merriweather Sans", sans-serif;
   margin-top: 10px;
   text-align: justify; }
+  @media screen and (max-width: 1200px) {
+    .about-category-info .category-description {
+      font-size: 14px; } }
   @media screen and (max-width: 900px) {
     .about-category-info .category-description {
       font-size: 14px; } }
